add an apology about non-generality to the intro

--- a/main.tex
+++ b/main.tex
@@ -251,6 +251,8 @@ Ravenel, Wilson
 
 Kitchloo, Laures, Wilson
 
+Akhil wrote a couple of blog posts about Ochanine's theorem: \texttt{https://amathew.wordpress.com/2012/05/30/ochanines-theorem-on-elliptic-genera/} and \texttt{https://amathew.wordpress.com/2012/05/31/the-other-direction-of-ochaines-theorem/}. Mentioning a more precise result might lend to a more beefy introduction.
+
 
 
 
