--- a/intro.tex
+++ b/intro.tex
@@ -88,8 +88,7 @@ We should also mention that we will specifically \emph{not} discuss the followin
 \item As sort of a sub-point (and despite the motivation provided in this Introduction), we will also mostly avoid manifold geometry.  (We do give a proof of Quillen's theorem on the structure of $MU_*$ which invokes some mild amount of manifold geometry.)\todo{If Jeremy's proof changes this, update this sentence.}  Again, much of the contemporary research about $\tmf$ is an attempt to find a geometric model, so that geometric techniques can be imported --- including equivariance and the geometry of quantum field theories, to name two.
 \item In a different direction, our focus will not linger on actually computing bordism rings $MX_*$, nor will we consider geometric constructions on manifolds and their behavior after imaging into the bordism ring.  This is also the source of active research: the structure of the symplectic bordism ring remains, to large extent, mysterious, and what we do understand of it comes through a mix of formal geometry and raw manifold geometry.  This could be a topic that fits logically into this document, were it not for time limitations and the author's inexpertise.
 \item The geometry of $E_\infty$ rings will also be avoided, at least to the extent possible.  Such objects become inescapable by the conclusion of our story, but there are better resources from which to learn about $E_\infty$ rings, and the pre--$E_\infty$ story is not told so often these days.  So, we will focus on the unstructured part and leave $E_\infty$ rings to other authors.
+\item There will be plenty of places where we will avoid stating things in maximum generality or with maximum thoroughness.  The story we are interested in telling draws from a blend of many others from different subfields of mathematics, many of which have their own topics courses.  Sometimes this will mean avoiding stating the most beautiful theorem in a subfield in favor of a theorem we will find more useful.  Other times this will mean abbreviating someone else's general definition to one more specialized to the task at hand.  In any case, we will give references to other sources where you can find these things cast in starring roles.
 \end{itemize}
 
 Finally, we must mention that there are several good companions to these notes.  Essentially none of the material here is original --- it's almost all cribbed either from published or unpublished sources --- but the source documents are quite scattered and individually dense.  We will make a point to cite useful references as we go.  One document stands out above all others, though: Neil Strickland's \textit{Functorial Philosophy for Formal Phenomena}~\cite{StricklandFPFP}.  These lecture notes can basically be viewed as an attempt to make it through this paper in the span of a semester.
-
-\todo{Akhil wrote a couple of blog posts about Ochanine's theorem: \texttt{https://amathew.wordpress.com/2012/05/30/ochanines-theorem-on-elliptic-genera/} and \texttt{https://amathew.wordpress.com/2012/05/31/the-other-direction-of-ochaines-theorem/}. Mentioning a more precise result might lend to a more beefy introduction.}
