don’t use \D in preparation for eventual conversion to svmono.cls

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -446,17 +446,17 @@ Snaith's theorem says $\Sigma^\infty QX = \Sigma^\infty \P X$ for connected spac
 
 Section 8 has a nice discussion about indecomposables and primitives, to help move back and forth between homology and cohomology.  It probably helps most with the dimension count argument below that we aren't going to get into.
 
-Start again with $D_{p^k} S^2 \simeq B\Sigma_{p^k}^{V_{p^k}}$.  We can associate to this a divisor $\D(V_{p^k})$ on $(B\Sigma_{p^k})_E$, which we know little about, but it is classified by a map to $\Div_{p^k} \CP^\infty_E$.  This receives a closed inclusion from $\Sub_{p^k} \CP^\infty_E$, so their pullback $Z_k$ is the largest subscheme of $(B\Sigma_{p^k})_E$ over which $\D(V_{p^k})$ is a subgroup divisor.
+Start again with $D_{p^k} S^2 \simeq B\Sigma_{p^k}^{V_{p^k}}$.  We can associate to this a divisor $\ThomDivisor(V_{p^k})$ on $(B\Sigma_{p^k})_E$, which we know little about, but it is classified by a map to $\Div_{p^k} \CP^\infty_E$.  This receives a closed inclusion from $\Sub_{p^k} \CP^\infty_E$, so their pullback $Z_k$ is the largest subscheme of $(B\Sigma_{p^k})_E$ over which $\ThomDivisor(V_{p^k})$ is a subgroup divisor.
 \begin{center}
 \begin{tikzcd}
-H_k \arrow{rr} \arrow{dd} & & \D(V_{p^k}) \\
+H_k \arrow{rr} \arrow{dd} & & \ThomDivisor(V_{p^k}) \\
 & Z_k \arrow{rr} \arrow{rd} & & \Sub_{p^k} \CP^\infty_E \arrow{rd} \\
 \Spf E^0 B\Sigma_{p^k} / \mathrm{tr} \arrow{rr} \arrow[densely dotted]{ru} & & (B\Sigma_{p^k})_E \arrow{rr} \arrow[crossing over,leftarrow]{uu} & & \Div_{p^k} \CP^\infty_E
 \end{tikzcd}
 \end{center}
 We will show the existence of the dashed map, implying that the restricted divisor $H_k$ is a subgroup divisor on $Y_k = \Spf E^0 B\Sigma_{p^k} / \mathrm{tr}$.
 
-(Prop 9.1:) This proof falls into two parts: first we construct a family of maps to $(B\Sigma_{p^k})_E$ on whose image $\D(V_{p^k})$ restricts to a subgroup divisor, and then we show that the union of their images is exactly $Y_k$.  Let $A$ be an abelian $p$--subgroup of $\Sigma_{p^k}$ that acts transitively on $\{1, \ldots, p^k\}$ (i.e., it is not boosted from some transfer).  The restriction of $V_{p^k}$ to $A$ is the regular representation, which splits as a sum of characters $V_{p^k}|_A = \bigoplus_{\L \in A^*} \L$.  Identifying $BA_E = \InternalHom{FormalGroups}(A^*, \CP^\infty_E)$, $\D(V_{p^k})$ restricts all the way to $\sum_{\L \in A^*} [\phi(\L)]$, with $\phi: A^* \to $``$\Gamma(\operatorname{Hom}(A^*, \G), \G)$''.  In Finite Subgroups of Formal Groups (see Props 22 and 32), we learned that the restriction of $\D(V_{p^k})$ further to $\Level(A^*, \CP^\infty_E)$ is a subgroup divisor.  So, our collection of maps are those of the form \[\Level(A^*, \CP^\infty_E) \to \InternalHom{FormalGroups}(A^*, \CP^\infty_E) = BA_E \to (B\Sigma_{p^k})_E.\]  Here, finally, is where we have to do some real work involving Chern classes and commutative algebra, so I'm inclined to skip it in the lectures.  Finally, you do a dimension count to see that $Z_k$ and $\Spf E^0 B\Sigma_{p^k} / \mathrm{tr}$ have the same dimension (which requires checking enough commutative algebra to see that ``dimension'' even makes sense), and so you show the map is injective and you're done.
+(Prop 9.1:) This proof falls into two parts: first we construct a family of maps to $(B\Sigma_{p^k})_E$ on whose image $\ThomDivisor(V_{p^k})$ restricts to a subgroup divisor, and then we show that the union of their images is exactly $Y_k$.  Let $A$ be an abelian $p$--subgroup of $\Sigma_{p^k}$ that acts transitively on $\{1, \ldots, p^k\}$ (i.e., it is not boosted from some transfer).  The restriction of $V_{p^k}$ to $A$ is the regular representation, which splits as a sum of characters $V_{p^k}|_A = \bigoplus_{\L \in A^*} \L$.  Identifying $BA_E = \InternalHom{FormalGroups}(A^*, \CP^\infty_E)$, $\ThomDivisor(V_{p^k})$ restricts all the way to $\sum_{\L \in A^*} [\phi(\L)]$, with $\phi: A^* \to $``$\Gamma(\operatorname{Hom}(A^*, \G), \G)$''.  In Finite Subgroups of Formal Groups (see Props 22 and 32), we learned that the restriction of $\ThomDivisor(V_{p^k})$ further to $\Level(A^*, \CP^\infty_E)$ is a subgroup divisor.  So, our collection of maps are those of the form \[\Level(A^*, \CP^\infty_E) \to \InternalHom{FormalGroups}(A^*, \CP^\infty_E) = BA_E \to (B\Sigma_{p^k})_E.\]  Here, finally, is where we have to do some real work involving Chern classes and commutative algebra, so I'm inclined to skip it in the lectures.  Finally, you do a dimension count to see that $Z_k$ and $\Spf E^0 B\Sigma_{p^k} / \mathrm{tr}$ have the same dimension (which requires checking enough commutative algebra to see that ``dimension'' even makes sense), and so you show the map is injective and you're done.
 
 
 -----
