--- a/preamble.tex
+++ b/preamble.tex
@@ -117,7 +117,7 @@
 \renewcommand{\t}{\mathbf t}
 \newcommand{\Gm}{\mathbb G_m}
 \newcommand{\h}{\mathfrak h}
-\newcommand{\D}{\mathbb D}
+\newcommand{\ThomDivisor}{\mathbb D}
 \renewcommand{\H}{\mathbb H}
 \newcommand{\HP}{\H\mathrm P}
 
