--- a/quillen.tex
+++ b/quillen.tex
@@ -540,23 +540,46 @@ Let $E = MU$.  The Landweber--Novikov operations are the \emph{stable} operation
 
 
 
-\todo[inline]{Jeremy Hahn, following Rudyak, produced a proof of the incidence relation which doesn't rely on this (particular) geometric model of complex bordism.  His write-up of the $p = 2$ case is elsewhere in the repository.  The end of this lecture and all of the next one should be reworked to use this other perspective!  Manifolds are gross.}
+\todo[inline]{Jeremy Hahn, following Rudyak, produced a proof of the incidence relation which doesn't rely on this (particular) geometric model of complex bordism.  His write-up of the $p = 2$ case is elsewhere in the repository.  The end of this lecture and all of the next one should be reworked to use this other perspective!}
 
-\todo[inline]{Here's a copy-paste of what Rudyak has to say about power operations.}
 
-\citeme{Rudyak Definition 7.4}
-Let $EC_n^{(m)}$ denote the $m$--skeleton of the bar-complex model of the contractible space with a free $C_n$--action.  For a point space $X$, we set $\Gamma_n^+(X) := (EC_n^{(m)})^+ \sm_{C_n} X^{\sm n}$, so that $\colim_n \Gamma_n^+(X) = X^{\sm n}_{hC_n}$.  If $\xi\co X \to BU(k)$ selects a complex vector bundle on $X$, then we get a complex vector bundle $p^* \xi^{\times n} \to EC_n^{(m)} \sm X^{\times n}$, and there is a quotient map \[(p^* \xi^{\times n}) / C_n \to \Gamma_m(X)\] which is also a complex vector bundle $\xi(m)$ of dimension $n \cdot \dim \xi$.  This intertwines with Thomification by \[T(\xi(n)) = \Gamma_m^+(T \xi).\]\todo{I don't think I got all the $m$s and $n$s straight here.}
 
-The external Steenrod--tom Dieck operation has signature \[EP_n^{2r}\co \widetilde{MU}^{2r}(X) \to \widetilde{MU}^{4r}(\Gamma_n^+(X)).\]  Beginning with a class \[f\co S^{2l} X \to MU(l + r),\] which induces a map \[h\co \widetilde{MU}^{2n(l+r)}(\Gamma_m^+(MU(l+r))) \to \widetilde{MU}^{2n(l+r)} \Gamma_m^+(S^{2l} X) \cong \widetilde{MU}^{2nr} \Gamma_m^+(X)\] which images the Thom--Dold class \[U_{\gamma^{l+r}} \in \widetilde{MU}^{2 \cdot n \cdot (l + r)}(\Gamma_m^+(MU(l+r)))\] to \[EP_m^{2r}(a) := h(U_{\gamma^{l+r}(n)}).\]
+We now turn to the construction of the other cohomology operations we will be interested in: the power operations.  Power operations get their name from their \emph{multiplicative} properties, and correspondingly we do not (\textit{a priori}) expect them to be additive operations, so they are quite distinct from the Landweber--Novikov operations.  Power operations arise from ``$E_\infty$'' structures on ring spectra\footnote{Or, by some accounts, ``$H_\infty$'' structures.}, but most such structures arise in nature from geometric models of cohomology theories.  To produce them for complex cobordism, we will return to the geometry of complex vector bundles.
 
-A different way of thinking of this is to assume that $MU$ has a sufficiently commutative multiplication so that there is a factorization \[MU^{\sm n} \to MU^{\sm n}_{hC_n} \xrightarrow\mu MU.\]  Given a class $x \in MU^* X$, you then get a map
+\begin{definition}[{\cite[Definition 7.4]{Rudyak}}]
+Suppose that $\xi\co X \to BU(k)$ presents a complex vector bundle of rank $k$ on $X$.  The $n$--fold direct sum of this bundle gives a new bundle \[X^{\times n} \xrightarrow{\xi^{\oplus n}} BU(k)^{\times n} \to BU(n \cdot k)\] of rank $nk$ on which the cyclic group $C_n$ acts.  By taking the $C_n$--quotient, we produce a vector bundle $\xi(n)$ on $X^{\times n}_{hC_n}$ participating in the diagram
 \begin{center}
 \begin{tikzcd}
-& X \arrow["\Delta"]{r} \arrow{d} & X^{\sm n} \arrow["x^{\sm n}"]{r} \arrow{d} & MU^{\sm n} \arrow{d} \\
-X \times BC_n \arrow[equal]{r} & X_{hC_n} \arrow{r} & X^{\sm n}_{hC_n} \arrow{r} & MU^{\sm n}_{hC_n} \arrow{r}{\mu} & MU
+X^{\times n} \arrow["xi^{\oplus n}"]{r} \arrow{d} & BU(k)^{\times n} \arrow{r} \arrow{d} & BU(nk) \\
+X^{\times n}_{hC_n} \arrow["\xi(n)"]{r} & BU(k)^{\times n}_{hC_n}. \arrow[red]{ru}
 \end{tikzcd}
 \end{center}
-by taking the composite on the bottom row.  This is the same map.  It has the behavior of raising $x$ to the $n${\th} power if you restrict to the basepoint inside of $BC_n$, but there is more data present beyond that.
+The universal case gives the highlighted map.\todo{You could give justification for why this red map exists.  Why does the $C_n$--quotient still give a vector bundle?}
+\end{definition}
+
+\begin{lemma}\citeme{Rudyak}
+\todo{This should come out of saying that both these operations are homotopy colimits.}
+There is an isomorphism of Thom spectra \[T(\xi(n)) \simeq (T\xi)^{\sm n}_{hC_n}. \qed\]
+\end{lemma}
+
+Applying the Lemma to the universal case, together with \Cref{ThomSpacesAreMonoidal}, produces a factorization \[MU(k)^{\sm n} \to MU(k)^{\sm n}_{hC_n} \to MU(nk)\] of the unstable multiplication map, and hence a stable factorization \[MU^{\sm n} \to MU^{\sm n}_{hC_n} \xrightarrow{\mu} MU\]  Such factorizations are what beget \textit{power operations}, which we will now define in the case at hand.
+
+\begin{definition}
+Starting with a class \[f\co \Susp^{2r} \Susp^\infty_+ X \to MU,\] we apply $(-)^{\sm n}_{hC_n}$ to produce the composite
+\begin{center}
+\begin{tikzcd}
+(\Susp^{2r} \Susp^\infty_+ X)^{\sm n}_{hC_n} \arrow["f^{\sm n}_{hC_n}"]{r} & MU^{\sm n}_{hC_n} \arrow["\mu"]{r} & MU \\
+\Susp^{2nr} (\Susp^\infty_+ X)^{\sm n}_{hC_n}. \arrow[equal]{u} \arrow["P^n_{\mathrm{ext}}(f)"']{urr}
+\end{tikzcd}
+\end{center}
+This defines the \textit{external $n${\th} Steenrod power of $f$}.  Employing the diagonal map on $X$, we can also pull back to get a map \[P^n(f)\co \Susp^{2nr} \Susp^\infty_+ X \sm \Susp^\infty_+ BC_n \simeq \Susp^{2nr} X_{hC_n} \xrightarrow{\Delta_{hC_n}} \Susp^{2nr} X^{\sm n}_{hC_n} \xrightarrow{P^n_{\mathrm{ext}}(f)} MU.\]  This defines the \textit{internal $n${\th} Steenrod power of $f$}.
+\end{definition}
+
+\begin{remark}
+Upon restriction to the basepoint in $BC_n$, $P^n(f)$ reduces to the $n$--fold internal cup product $f^{n}$.
+\end{remark}
+
+\todo{This needs some smoothing with the surrounding text, since it got inserted later on.  In particular, we should list some properties and then tantalize by saying these two classes of operations are comparable.}
 
 
 
