warnings for the unfinished parts of the notes

--- a/sigma.tex
+++ b/sigma.tex
@@ -1064,6 +1064,10 @@ This is exactly Witten's formula for his genus, as applied to complex manifolds 
 
 \section{$\Spin$ and $\String$ orientations}
 
+\begin{center}
+\textbf{\Large This is under construction.  The stuff here is correct, but it didn't turn into a super coherent lecture, and I have an idea for something better to say.}
+\end{center}
+
 \todo[inline]{A different approach to this is to work through the $p \ne 2$ case, since you can totally, correctly work it out and see the $\Sigma$--structure relation get imposed. That's kind of attractive.  Too bad you had this through after the class was complete.}
 
 In the previous Lecture, we proved that elliptic spectra receive canonical $MU[6, \infty)$--orientations, that complex elliptic spectra collectively give rise to a genus valued in modular forms, and that the $q$--expansions of these modular forms are integral.  However, the original \Cref{OchanineWittenTheorem} of Ochanine and Witten claimed to describe a genus on $\Spin$-- and $\String$--manifolds, which we have only managed to approximate with our study of $MU[6, \infty)$--orientations.  Our last goal for this Case Study is to show that the chromatic formal schemes associated to spaces like $B\String$ are somewhat accessible, and so chromatically-amenable elliptic spectra receive canonical $M\String$--orientations.
