--- a/sigma.tex
+++ b/sigma.tex
@@ -1068,7 +1068,7 @@ This is exactly Witten's formula for his genus, as applied to complex manifolds 
 \textbf{\Large This is under construction.  The stuff here is correct, but it didn't turn into a super coherent lecture, and I have an idea for something better to say.}
 \end{center}
 
-\todo[inline]{A different approach to this is to work through the $p \ne 2$ case, since you can totally, correctly work it out and see the $\Sigma$--structure relation get imposed. That's kind of attractive.  Too bad you had this through after the class was complete.}
+\todo[inline]{A different approach to this is to work through the $p \ne 2$ case, since you can totally, correctly work it out and see the $\Sigma$--structure relation get imposed. That's kind of attractive.  Too bad you had this thought after the class was complete.  ------  We might also try to understand the extension problem of orientations across $MU \to MSO$ for spectra which are local away from $2$.  It seems like some juggling of the complex-conjugation idempotents could give you access to $BSO$ information in terms of $BU$, which would be satisfying.  Compare with Neil's response at \texttt{http://mathoverflow.net/questions/123958/a-formal-group-law-over-oriented-bordism}.}
 
 In the previous Lecture, we proved that elliptic spectra receive canonical $MU[6, \infty)$--orientations, that complex elliptic spectra collectively give rise to a genus valued in modular forms, and that the $q$--expansions of these modular forms are integral.  However, the original \Cref{OchanineWittenTheorem} of Ochanine and Witten claimed to describe a genus on $\Spin$-- and $\String$--manifolds, which we have only managed to approximate with our study of $MU[6, \infty)$--orientations.  Our last goal for this Case Study is to show that the chromatic formal schemes associated to spaces like $B\String$ are somewhat accessible, and so chromatically-amenable elliptic spectra receive canonical $M\String$--orientations.
 
